# cgproject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  readme.txt
assets/Objects/: Orangutan.mtl
assets/Shaders/: fragmentShader.glsl  particleShader.frag  particleShader.vert  phongShader.frag  terrainShader.vert  vertexShader.glsl
assets/Sounds/: License.txt
assets/shaders/: gunShader.vert  multipleLightsShader.frag  multipleLightsShader.vert  particleShader.frag  particleShader.vert  phongShader.frag  phongShader.vert  shader.frag  shader.vert  terrainShader.frag  terrainShader.vert
src/: Application.cpp  Application.hpp  GLincludes.hpp  Game.cpp  Game.h  ParticleManager.cpp  ParticleManager.h  main.cpp  test.cpp
src/Entities/: Camera.cpp  Camera.hpp  Entitiy.cpp  Entitiy.hpp
src/Models/: Model.h  RawModel.cpp  RawModel.hpp  TexturedModel.cpp  TexturedModel.hpp
src/RenderEngine/: Loader.cpp  Loader.hpp  Renderer.cpp  Renderer.hpp
src/Shaders/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.hpp  StaticShader.cpp  StaticShader.hpp
src/Textures/: ModelTexture.cpp  ModelTexture.hpp
src/Toolbox/: Maths.cpp  Maths.hpp  TextureLoader.cpp  TextureLoader.hpp
src/Utils/: Camera.cpp  Loader.cpp  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  ObjectLoader.cpp  ObjectLoader.h  Vector2f.cpp  Vector2f.h  Vector3f.cpp  Vector3f.h  Vertex.h  color.cpp  color.h  rgbimage.cpp  rgbimage.h  vector.cpp  vector.h
src/buffers/: UniformBuffer.cpp  UniformBuffer.h
src/common/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/entities/: BulletEntity.cpp  BulletEntity.h  CoinEntity.cpp  CoinEntity.h  EnemyEntity.cpp  EnemyEntity.h  Entity.cpp  Entity.h  GunEntity.cpp  GunEntity.h  Orangutan.cpp  Orangutan.h  ParticleEntity.cpp  ParticleEntity.h  PlayerEntity.cpp  PlayerEntity.h  SkyboxEntity.cpp  SkyboxEntity.h  SquirrelMonkey.cpp  SquirrelMonkey.h  StaticEntity.cpp  StaticEntity.h  TerrainEntity.cpp  TerrainEntity.h
src/gui/: GUIManager.cpp  GUIManager.h
src/interfaces/: Renderable.h
src/lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/managers/: GUIManager.cpp  GUIManager.h  LightManager.cpp  LightManager.h  ParticleManager.cpp  ParticleManager.h  (+4 more)
(+63 files in other folders)
